--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,10 @@ pycparser==2.22
 PyMySQL==1.1.1
 pyotp==2.9.0
 PyQt5==5.15.11
-pyqt5-plugins==5.15.9.2.3
 PyQt5-Qt5==5.15.2
-pyqt5-tools==5.15.9.3.3
 PyQt5_sip==12.17.0
 python-dotenv==1.0.1
 qrcode==8.0
 qt5-applications==5.15.2.2.3
 qt5-tools==5.15.2.1.3
+pywinstyles==1.8
